@@ -1,3 +1,7 @@
+mlr_2.4:
+- new measures
+-- brier
+
 mlr_2.3:
 - resample now returns an object of class ResampleResult (downward compatible)
   to allow for a print method.
